# paperclip

./: .env.example  .gitignore  CLAUDE.md  README.md  analyzer.py  arxiv.py  config.py  feishu_ws_client.py  fetch_paper.py  hf_daily_papers.py  pyproject.toml  run_bot.py  tex_converter.py  webhook.py
.claude/skills/paper-reader/: SKILL.md
.claude/skills/paper-reader/examples/: 2304.14365_deep.md  2304.14365_notes.md  2304.14365_quick.md
.claude/skills/paper-reader/references/: paper-deep.md  paper-notes.md  paper-quick.md
docs/superpowers/specs/: 2026-04-30-deepwiki-repo-summary-design.md
src/: __init__.py  analyzer.py  analyzer_sdk.py  config.py  deepwiki_client.py  feishu_ws_client.py  fetch_paper.py  hf_daily_papers.py  huggingface.py  run_bot.py  state.py  tex_converter.py  tex_fetcher.py  url_parser.py
